navbar, footer changed in some files for sync

--- a/frontend/404.html
+++ b/frontend/404.html
@@ -42,23 +42,26 @@
 
       footer {
         background-color: #f8f9fa;
-        padding: 5px 0;
-        position: sticky;
-        width: 100%;
-        bottom: 0;
-        font-size: 0.875rem; 
+        padding: 10px 0;
+        font-size: 0.875rem;
       }
 
       footer h5 {
-        font-size: 1rem; 
+        font-size: 1rem;
       }
 
       footer p, footer a {
-        margin: 0; 
+        margin: 0;
+        color: #007bff; /* Blue theme color */
+        text-decoration: none;
+      }
+
+      footer a:hover {
+        text-decoration: underline;
       }
 
       footer .col-md-4 {
-        padding: 5px; 
+        padding: 5px;
       }
 
       hr {
@@ -91,16 +94,19 @@
               <a class="nav-link" href="https://www.seniorsafe.info/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/businessEmailCompromisePhishing.html">Scam Overview</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.seniorsafe.info/Quiz/quiz.html">Test Your Knowledge</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.seniorsafe.info/businessEmailCompromisePhishing.html">Scam Overview</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.seniorsafe.info/scamReport/index.html">Report Phishing Scam</a>
             </li>
           </ul>
         </div>
@@ -122,12 +128,13 @@
           <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/index.html">Home</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/scamReport/index.html">Report Phishing Scam</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/Quiz/quiz.html">Test Your Knowledge</a></li>
-            </ul>      
+              <li class="d-inline"><a href="https://www.seniorsafe.info/index.html">Home</a></li>
+              <li class="d-inline"><a href="https://www.seniorsafe.info/businessEmailCompromisePhishing.html">Scam Overview</a></li>
+              <li class="d-inline"><a href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a></li>
+              <li class="d-inline"><a href="https://www.seniorsafe.info/Quiz/quiz.html">Test Your Knowledge</a></li>
+              <li class="d-inline"><a href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+              <li class="d-inline"><a href="https://www.seniorsafe.info/scamReport/index.html">Report Phishing Scam</a></li>
+          </ul>      
         </div>
         <hr />
         <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
