--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -61,7 +61,7 @@
                     <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
+                    <a class="nav-link" href="./scamReport/index.html">Report Phishing Scam</a>
                   </li>
                 </ul>
               </div>
@@ -145,7 +145,7 @@
                     <li class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
                     <li class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
                     <li class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
-                    <li class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
+                    <li class="d-inline"><a href="./scamReport/index.html">Report Phishing Scam</a></li>
                 </ul>        
             </div>
             <hr />
