--- a/frontend/404.html
+++ b/frontend/404.html
@@ -74,7 +74,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="https://www.seniorsafe.info/resources/logof.jpg" alt="Senior Safe Logo" class="logo" />Senior Safe
         </a>
         <button
