minor changes fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,7 +120,7 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Trending Scam</h3>
+						<h3>Trending Scams</h3>
 					</div>
         </div>
         <a href="../scrollytelly/data.html"> Discover More </a>
